--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -2,15 +2,17 @@
 
 <div class="col-md-6" ng-repeat="product in products">
   <div class="card">
-    <div class="card-header">{{product.brand | uppercase}} {{product.model | lowercase}}</div>
-    <div class="card-body">
-      <div>{{product.price | currency}}</div>
-      <div><input type="checkbox" ng-disabled="true" ng-checked="product.inStock" /> InStock</div>
-    </div>
-    <div class="card-footer">
-      {{product.lastUpdated | date:'MM-dd-yyyy hh:mm:ss'}}
-      ( {{product.lastUpdated | time}} )
-    </div>
+    <a href="#!/products/{{product._id}}">
+      <div class="card-header">{{product.brand | uppercase}} {{product.model | lowercase}}</div>
+      <div class="card-body">
+        <div>{{product.price | currency}}</div>
+        <div><input type="checkbox" ng-disabled="true" ng-checked="product.inStock" /> InStock</div>
+      </div>
+      <div class="card-footer">
+        {{product.lastUpdated | date:'MM-dd-yyyy hh:mm:ss'}}
+        ( {{product.lastUpdated | time}} )
+      </div>
+    </a>
   </div>
   <br />
 </div>
