New Product Page

--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -1,5 +1,5 @@
 <h1>Products</h1>
-
+<a href="#!/products/new" class="btn btn-success">Add New Product</a>
 <div class="col-md-6" ng-repeat="product in products">
   <div class="card">
     <a href="#!/products/{{product._id}}">
