ng-include Directive

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   background-color:#fff;
 }
 
-.navbar-brand,.navbar ul li a{
+.navbar-brand,.navbar ul li a,footer{
   color:#fff !important;
 }
 a,a:hover{
