--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -6,21 +6,7 @@
 </div>
 
 <div class="col-md-6" ng-repeat="product in products">
-  <div class="card">
-    <a href="#!/products/{{product._id}}">
-      <div class="card-header">{{product.brand | uppercase}} {{product.model | lowercase}}</div>
-      <div class="card-body">
-        <div>{{product.price | currency}}</div>
-        <div><input type="checkbox" ng-disabled="true" ng-checked="product.inStock" /> InStock</div>
-      </div>
-    </a>
-    <div class="card-footer">
-      {{product.lastUpdated | date:'MM-dd-yyyy hh:mm:ss'}}
-      ( {{product.lastUpdated | time}} )
-      <button class="btn btn-danger btn-sm" ng-click="onDelete(product._id)">Delete</button>
-    </div>
-  </div>
-  <br />
+  <my-product product="product" on-notify-delete="onNotificationReceived()"></my-product>
 </div>
 
 <!-- Filters: uppercase, lowercase, currency, date, titleCase -->
