Review list directive

--- a/src/templates/product-detail.html
+++ b/src/templates/product-detail.html
@@ -11,18 +11,5 @@
       {{product.lastUpdated | time}}
     </div>
   </div>
-
-
-  <div>
-    <h3 ng-if="product.reviews && product.reviews.length>0">Reviews</h3>
-    <h3 ng-if="!product.reviews || product.reviews.length===0">Be the first one to review</h3>
-    <div ng-repeat="review in product.reviews">
-      <h3>{{review.name}}</h3>
-      <b>{{review.subject}} <span class="badge badge-success">{{review.rating}} *</span></b>
-      <p>{{review.message}}</p>
-      <div>{{review.lastUpdated | time}}</div>
-      <hr />
-    </div>
-  </div>
-
+  <review-list product="product"></review-list>
 </div>
