--- a/src/templates/product-detail.html
+++ b/src/templates/product-detail.html
@@ -11,5 +11,5 @@
       {{product.lastUpdated | time}}
     </div>
   </div>
-  <review-list product="product"></review-list>
+  <review-list reviews="product.reviews"></review-list>
 </div>
