--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,9 @@ a,a:hover{
   margin-top:200px;
   margin-bottom:100px;
 }
+input.ng-invalid{
+  border-left:5px solid brown;
+}
+input.ng-valid{
+  border-left:5px solid green;
+}
